# docs/swagger.json
@@ -12,6 +12,32 @@
     "basePath": "/api",
     "paths": {
         "/webhooks": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "List webhooks and associated request",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Webhooks"
+                ],
+                "summary": "List webhooks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Webhook"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -41,7 +67,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/CreateWebhookResponse"
+                            "$ref": "#/definitions/Webhook"
                         }
                     }
                 }
@@ -74,7 +100,7 @@
                 }
             }
         },
-        "CreateWebhookResponse": {
+        "Webhook": {
             "type": "object",
             "properties": {
                 "content_type": {
@@ -91,6 +117,12 @@
                 },
                 "payload": {
                     "type": "string"
+                },
+                "requests": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/WebhookRequest"
+                    }
                 },
                 "response_code": {
                     "type": "integer"
@@ -109,6 +141,36 @@
                     "type": "integer"
                 }
             }
+        },
+        "WebhookRequest": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "headers": {
+                    "$ref": "#/definitions/datatypes.JSONMap"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "method": {
+                    "type": "string"
+                },
+                "query": {
+                    "$ref": "#/definitions/datatypes.JSONMap"
+                },
+                "received_at": {
+                    "type": "string"
+                },
+                "webhook_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "datatypes.JSONMap": {
+            "type": "object",
+            "additionalProperties": true
         }
     },
     "securityDefinitions": {
